--- a/product-scenarios/4-application-development-using-apis/4.1-application-developers-should-be-able-to-use-apis-in-their-applications/pom.xml
+++ b/product-scenarios/4-application-development-using-apis/4.1-application-developers-should-be-able-to-use-apis-in-their-applications/pom.xml
@@ -37,6 +37,7 @@
 
     <modules>
         <module>4.1.1-registering-an-application</module>
+        <module>4.1.7-subscribe-to-an-api</module>
     </modules>
 
     <dependencyManagement>
